Stop stress box flicker.

--- a/src/ui/sheet.component.less
+++ b/src/ui/sheet.component.less
@@ -33,17 +33,3 @@
   color: gray;
 }
 
-.fate-sheet-overlay {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 5;
-  opacity: 0.9;
-}
-
-.fate-sheet-overlay-for {
-  font-style: italic;
-  opacity: 0.5;
-}
-
