--- a/src/ui/stress-box.component.less
+++ b/src/ui/stress-box.component.less
@@ -1,5 +1,14 @@
 #fate-stress-box {
-  min-height: 2.2em !important;
-  min-width: 2.2em !important;
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+
+  height: 2.2em;
+  width: 2.2em;
+
+  border-style: solid;
+  border-radius: 50%;
+  border-width: 1px;
 }
 
